--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,31 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 2rem; }
+  padding: 0 1.6rem; }
 
 .navigation {
-  height: 4.4rem; }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 0; }
+  .navigation__checkbox {
+    display: none; }
+  .navigation__button {
+    position: fixed;
+    right: 1rem;
+    height: 3rem;
+    width: 3rem;
+    cursor: pointer;
+    text-align: center; }
+  .navigation__nav {
+    display: none; }
+  .navigation__list {
+    list-style: none; }
+  .navigation__link {
+    text-decoration: none; }
   .navigation__icon {
-    position: relative; }
+    position: relative;
+    top: 50%; }
     .navigation__icon, .navigation__icon::before, .navigation__icon::after {
       width: 1.8rem;
       height: 2px;
