--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,1 +1,7 @@
 $color-primary:#0000EC;
+$color-white:#fff;
+$color-heading:#060A24;
+$color-button:#00F3BB;
+
+$font-mono:'IBM Plex Mono', monospace;
+$font-sans:'IBM Plex Sans', sans-serif;
