--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,66 @@ html {
 body {
   box-sizing: border-box; }
 
+.navigation__list {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 300; }
+
+.heading__1 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 3.6rem;
+  font-weight: 400;
+  line-height: 4.2rem;
+  color: #060A24; }
+
+.heading__span {
+  text-decoration: line-through; }
+
+.paragraph {
+  font-size: 1.4rem;
+  font-family: "IBM Plex Mono", monospace;
+  color: #060A24;
+  letter-spacing: 0;
+  line-height: 2.2rem; }
+
+.btn, .btn:link, .btn:visited {
+  font-family: "IBM Plex Mono", monospace;
+  font-weight: 500;
+  font-size: 1.6rem;
+  text-decoration: none;
+  line-height: 2.2rem;
+  color: #060A24; }
+
+.btn, .btn:link, .btn:visited {
+  display: block;
+  margin: 2.4rem 0;
+  padding: 1.3rem 9.6rem;
+  width: 28.8rem;
+  border-radius: .1rem;
+  cursor: pointer;
+  background-image: linear-gradient(90deg, #00F3BB 0%, #00F3BB 49%, #0000EC 100%);
+  background-size: 58rem;
+  transition: all .3s; }
+
+.btn:active, .btn:focus {
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 236, 0.2); }
+
+.btn:hover {
+  color: #fff;
+  background-position: 29rem;
+  transition: all .3s;
+  transform: translateY(-1px); }
+
+.header {
+  margin: 1.6rem; }
+
+.heading__1 {
+  width: 80%; }
+
+.paragraph {
+  margin: 1.6rem 0 1.6rem 0;
+  display: inline-block; }
+
 .navigation {
   display: flex;
   justify-content: space-between;
@@ -25,8 +85,7 @@ body {
     width: 3rem;
     cursor: pointer;
     text-align: center;
-    z-index: 100;
-    background-color: khaki; }
+    z-index: 100; }
   .navigation__background {
     position: fixed;
     top: 4.4rem;
@@ -36,7 +95,9 @@ body {
     padding: 0;
     transition: all .3s; }
   .navigation__nav {
-    visibility: hidden; }
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s; }
   .navigation__list {
     position: absolute;
     top: 4.4rem;
@@ -50,7 +111,7 @@ body {
       padding: 1.6rem 0 1.2rem 1.6rem; }
   .navigation__link {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #fff;
     transition: all .3s; }
     .navigation__link:link, .navigation__link:visited {
       display: inline-block;
@@ -94,4 +155,5 @@ body {
     width: 100%;
     height: 22.4rem; }
   .navigation__checkbox:checked ~ .navigation__nav {
-    visibility: visible; }
+    visibility: visible;
+    opacity: 1; }
