--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import "base/typography";
 @import "base/utilities.scss";
 
+@import "components/buttons";
+
 @import "layout/header";
 @import "layout/footer";
 @import "layout/navigation";   
