contenedor seccion episodios

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,5 +3,9 @@ $color-white:#fff;
 $color-heading:#060A24;
 $color-button:#00F3BB;
 
+//linear gradient colors
+$color-lg-light:#0000FF;
+$color-lg-dark:#0000A3;
+
 $font-mono:'IBM Plex Mono', monospace;
 $font-sans:'IBM Plex Sans', sans-serif;
