--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/buttons";
 
+@import "layout/episodes";
 @import "layout/header";
 @import "layout/footer";
 @import "layout/navigation";   
