--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,13 @@ body {
   line-height: 2.2rem;
   color: #060A24; }
 
+.episodes__heading {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 3.6rem;
+  font-weight: 400;
+  line-height: 4.2rem;
+  color: #fff; }
+
 .btn, .btn:link, .btn:visited {
   display: block;
   margin: 2.4rem 0;
@@ -58,6 +65,14 @@ body {
   background-position: 29rem;
   transition: all .3s;
   transform: translateY(-1px); }
+
+.episodes {
+  display: block;
+  padding: 1.6rem;
+  background-image: linear-gradient(180deg, #0000FF 0%, #0000A3 100%);
+  clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%); }
+  .episodes__heading {
+    padding: 3.2rem 0 2.1rem 0; }
 
 .header {
   margin: 1.6rem; }
