--- a/sass/layout/_episodes.scss
+++ b/sass/layout/_episodes.scss
@@ -1,12 +1,31 @@
 .episodes{
     display: block;
-    padding: 1.6rem;
     background-image: linear-gradient(180deg, 
     $color-lg-light 0%, $color-lg-dark 100%);
-    clip-path: polygon( 0 15%,  100% 0, 100% 85%, 0 100% );
+    clip-path: polygon( 0 2%,  100% 0, 100% 98%, 0 100% );
 
     &__heading{
-        padding:3.2rem 0 2.1rem 0;
-        
+        padding:3.2rem 0 2.1rem 1.6rem;
     }
+
+    &__container{
+        width: 100%;
+    }
+
+    &__episode{
+        padding: 0 1.6rem;
+        &--1,
+        &--2,
+        &--3,
+        &--4{
+            
+            width: 100%;
+            height: 22.5rem;
+        }
+        
+        &--4{
+            margin-bottom: 15rem;
+        }
+        
+    } 
 }
