--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/typography";
 @import "base/utilities.scss";
 
+@import "components/phone";
 @import "components/buttons";
 
 @import "layout/episodes";
