--- a/sass/layout/_episodes.scss
+++ b/sass/layout/_episodes.scss
@@ -1,4 +1,5 @@
 .episodes{
+    position: relative;
     display: block;
     background-image: linear-gradient(180deg, 
     $color-lg-light 0%, $color-lg-dark 100%);
@@ -18,7 +19,6 @@
         &--2,
         &--3,
         &--4{
-            
             width: 100%;
             height: 22.5rem;
         }
