--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -41,3 +41,35 @@
         color: $color-white;
     }
 }
+
+.donde-venimos{
+    &__text{
+        &--heading{
+            @include heading-styles;
+        }
+    }
+}
+
+.invitados-especiales{
+    &__heading{
+        @include heading-styles;
+       
+    }
+}
+
+.nuestros-temas{
+
+    &__heading{
+        @include heading-styles;
+    }
+
+    &__figure{
+
+        &--heading2{
+            font-family: $font-mono;
+            font-size: 2.4rem;
+            color: $color-heading;
+            font-weight: 600;   
+        }
+    }
+}
