--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "layout/footer";
 @import "layout/invitados-especiales";  
 @import "layout/navigation";  
+@import "layout/nuestros-temas";  
 
 
 @import "pages/home";
