--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -73,3 +73,13 @@
         }
     }
 }
+
+.ultimas-novedades{
+    &__container{
+        &--heading{
+            @include heading-styles;
+            text-align: center;
+            color: $color-white;
+        }
+    }
+}
