--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "layout/invitados-especiales";  
 @import "layout/navigation";  
 @import "layout/nuestros-temas";  
+@import "layout/ultimas-novedades";
 
 
 @import "pages/home";
