--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,8 +1,10 @@
 .btn{
+    margin: 0 auto;
     &,
     &:link, 
     &:visited{
-        display: block;
+        display: inline-block;
+        font-weight: 500;
         margin: 2.4rem 0;
         padding: 1.3rem 9.6rem;
         width: 28.8rem;
@@ -14,7 +16,6 @@
         $color-primary 100%);
         background-size: 58rem;
         transition: all .3s;
-
     }
 
     &:active,
@@ -28,7 +29,11 @@
         background-position: 29rem;
         transition: all .3s;
         transform: translateY(-1px);
-        
     }
 
+}
+
+a.btn.escucha{
+    padding: 1.3rem 4.3rem;
+    text-align: center;
 }
