--- a/sass/layout/_donde-venimos.scss
+++ b/sass/layout/_donde-venimos.scss
@@ -1,19 +1,22 @@
 .donde-venimos{
-    margin: 2.7rem 1.6rem;
+    margin: 2.7rem 1.6rem 0 1.6rem;
     display: flex;
     flex-direction: column;
+    
 
     &__phone{
+       
         margin: 0 auto;
-    
+        transform: translateY(-10rem);
+        
         &--img{
-            width: 25rem;
-            height: 40rem;
+            width: 27rem;
+            height: 44rem;
         }
     }
 
     &__text{
-        margin-top: 2.7rem;
+        transform: translateY(-4rem);
     }
     
 }
