--- a/sass/layout/_invitados-especiales.scss
+++ b/sass/layout/_invitados-especiales.scss
@@ -1,7 +1,7 @@
 .invitados-especiales{
   
     &__heading{
-        margin: 2.7rem 1.6rem 1.6rem 1.6rem;
+        margin:0 1.6rem 1.6rem 1.6rem;
     }
 
     &__imagenes{
