--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 *::after {
   padding: 0;
   margin: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+  scroll-behavior: smooth; }
 
 html {
   font-size: 62.5%; }
@@ -108,15 +109,15 @@ a.btn.escucha {
 .donde-venimos {
   margin: 2.7rem 1.6rem 0 1.6rem;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  transform: translateY(-10rem); }
   .donde-venimos__phone {
-    margin: 0 auto;
-    transform: translateY(-10rem); }
+    margin: 0 auto; }
     .donde-venimos__phone--img {
       width: 27rem;
       height: 44rem; }
   .donde-venimos__text {
-    transform: translateY(-4rem); }
+    transform: translateY(5rem); }
 
 .episodes {
   background-image: linear-gradient(180deg, #0000FF 0%, #0000A3 100%);
