--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,10 @@
 .header{
     margin: 1.6rem;
+
+    @media only screen and (min-width: $bp-small){
+       display: flex;
+    flex-direction: column;
+    }
 }
 
 .heading__1{
