--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -4,3 +4,11 @@
     font-weight:400 ;
     line-height: 4.2rem;
 }
+
+@mixin paragraph-styles{
+    font-size: 1.4rem;
+    font-family: $font-mono;
+    color: $color-heading;
+    letter-spacing: 0;
+    line-height: 2.2rem;
+}
