--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,7 +9,11 @@
 
 html{
     font-size: 62.5%; //1rem --> 10px
-    
+
+    @media only screen and (min-width: $bp-small){
+        font-size: 50%; //1rem --> 8px
+    }
+
 }
 
 body{
