--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -15,23 +15,27 @@
 }
 
 .paragraph{
-    font-size: 1.4rem;
-    font-family: $font-mono;
-    color: $color-heading;
-    letter-spacing: 0;
-    line-height: 2.2rem;
+    @include paragraph-styles;
+
+    @media only screen and (min-width: $bp-small){
+        font-size: 1.2rem;
+    }
+}
+
+.footer{
+    &__paragraph{
+        @include paragraph-styles;
+    }
 }
 
 .btn{
     &,
     &:link, 
     &:visited{
-        font-family: $font-mono;
+        @include paragraph-styles;
         font-weight: 500;
         font-size: 1.6rem;
         text-decoration: none;
-        line-height: 2.2rem;
-        color: $color-heading;
     }
 }
 
@@ -83,3 +87,4 @@
         }
     }
 }
+
