--- a/sass/layout/_episodes.scss
+++ b/sass/layout/_episodes.scss
@@ -3,27 +3,45 @@
     $color-lg-light 0%, $color-lg-dark 100%);
     clip-path: polygon( 0 2%,  100% 0, 100% 98%, 0 100% );
 
+    @media only screen and (min-width: $bp-small){
+        padding-top: 4rem;
+        clip-path: polygon( 0 10%,  100% 0, 100% 90%, 0 100% );
+    }
+
     &__heading{
         padding:3.2rem 0 2.1rem 1.6rem;
     }
 
     &__container{
         width: 100%;
+        @media only screen and (min-width: $bp-small){
+            display: grid;
+            grid-template-columns: repeat(2, 50%);
+            grid-template-rows:  repeat(2,50%);
+        }
     }
 
     &__episode{
+        
         padding: 0 1.6rem;
+
+        @media only screen and (min-width: $bp-small){
+            padding: 1.6rem;
+        }
         &--1,
         &--2,
         &--3,
         &--4{
             width: 100%;
             height: 16rem;
-            
+
+            @media only screen and (min-width: $bp-small){
+                height: 20rem;
+            }
         }
         
         &--4{
-            margin-bottom: 15rem;
+           margin-bottom: 10rem;
         }
         
     } 
