--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,6 +3,12 @@
     flex-direction: column;
     align-items: center;
     margin: 2rem 0;
+
+    &__paragraph{
+        margin: 1.6rem 0 1.6rem 0;
+        display: inline-block;
+    }
+    
 }
 
 .iconos{
