--- a/sass/layout/_invitados-especiales.scss
+++ b/sass/layout/_invitados-especiales.scss
@@ -1,4 +1,8 @@
 .invitados-especiales{
+
+    @media only screen and (min-width: $bp-small){
+        transform: translateY(-5rem);
+    }
   
     &__heading{
         margin:0 1.6rem 1.6rem 1.6rem;
@@ -6,9 +10,14 @@
 
     &__imagenes{
         cursor: pointer;
-       &--photo{
-           width: 100%;
-          display: block;
+        @media only screen and (min-width: $bp-small){
+            display: grid;
+             grid-template-columns:repeat(2,50%) ;
+             grid-template-rows: repeat(3, 1fr);
+        }
+       &--photo{ 
+        width: 100%;
+        display: block;    
        }
 
     }
