--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -8,9 +8,11 @@
 
     &__logo{
         padding: 1rem 1.6rem;
+        
     }
 
     &__button{
+        margin: 1rem 1.6rem;
         justify-self: flex-end;
         margin-left: auto;
         align-self: center;
@@ -18,6 +20,10 @@
         height: 3rem;
         width: 3rem;
         cursor: pointer; 
+
+        @media only screen and (min-width: $bp-small){
+            display: none;
+        }
     }
 
     &__background{
@@ -28,12 +34,24 @@
         background-color:  $color-primary;
         padding: 0;
         transition: all .3s;
+
+        @media only screen and (min-width: $bp-small){
+            visibility: hidden;
+        }
     }
 
     &__nav{
+        
        visibility: hidden;
        opacity: 0;
        transition: all .3s;
+
+       @media only screen and (min-width: $bp-small){
+        opacity: 1;
+        visibility: visible;
+        margin-right:1rem ;
+        }
+    
     }
 
     &__list{
@@ -42,16 +60,29 @@
         left: 0;
         list-style: none;
         font-size: 1.6rem;
+        @media only screen and (min-width: $bp-small){
+            position: relative;
+            top: 0;
+            display: flex;
+         }
         
-    }
+        
+    }                           
 
     &__item{
         line-height: 2.8rem;
         
         &:first-child{
             padding: 1.6rem 0 1.2rem 1.6rem;
+            @media only screen and (min-width: $bp-small){
+                padding: .8rem;
+            }
         }
         padding: .8rem 0 1.2rem 1.6rem;
+        @media only screen and (min-width: $bp-small){
+            margin: 1.6rem 1rem;  
+        }
+        
     }
 
     &__link{
@@ -75,12 +106,38 @@
             color:black;
             font-weight:700 ;
         }
+        @media only screen and (min-width: $bp-small){
+            
+            color: $color-heading;
+            font-family: $font-mono;
+        
+            &:link,
+            &:visited{
+            display: inline-block;
+            }
+
+            &:hover{
+                transform: translateX(1rem);
+                background-position: 100%;
+                color:$color-button;
+                text-decoration: line-through;
+                font-weight:500;
+            }
+            &:active{
+                transform: translateX(1rem);
+                background-position: 100%;
+                color:rgba($color-active, .56);
+                text-decoration: line-through;
+                font-weight:400;
+            }
+        }
         
     }
 
     &__icon{
+        
          position: relative;
-         top: 50%;
+         top: 50%; 
 
         &,
         &::before,
@@ -90,14 +147,22 @@
             height: 2px;
             background: #060A24;
             display: block;
+            // @media only screen and (min-width: $bp-small){
+            //     display: none;
+            // }
         }
 
         &::before,
         &::after{
+            
             content: "";
             position:absolute;
             left: 0;
             transition: all .3s;
+
+            // @media only screen and (min-width: $bp-small){
+            //     display: none;
+            // }
         }
 
         &::before{
@@ -122,16 +187,25 @@
     //conviritiendo en x el menú al darle click
     &__checkbox:checked + &__button &__icon{
         background-color: transparent;
+        @media only screen and (min-width: $bp-small){
+                display: none;
+            }
     }
 
     &__checkbox:checked + &__button &__icon::after{
         top: 0;
         transform: rotate(135deg);
+        @media only screen and (min-width: $bp-small){
+            display: none;
+        }
     }
 
     &__checkbox:checked + &__button &__icon::before{
         top: 0;
         transform: rotate(-135deg);
+        @media only screen and (min-width: $bp-small){
+            display: none;
+        }
     }
 
     //mostrando menu
@@ -139,17 +213,12 @@
     &__checkbox:checked ~ &__background{
         width: 100%;
         height: 22.4rem;
+        
     }
 
     &__checkbox:checked ~ &__nav{
         visibility: visible;
         opacity: 1;
-        
     }
 
-    // &__checkbox:checked .header{
-    //     position: absolute;
-    //     top: -27rem;
-    //     font-size:12rem;
-    // }
 }
