--- a/sass/layout/_ultimas-novedades.scss
+++ b/sass/layout/_ultimas-novedades.scss
@@ -3,6 +3,9 @@
     $color-lg-light 0%, $color-lg-dark 100%);
     clip-path: polygon( 0 7%,  100% 0, 100% 100%, 0 100% );
 
+    @media only screen and (min-width: $bp-small){
+        clip-path: polygon( 0 20%,  100% 0, 100% 100%, 0 100% );
+    }
     &__container{
         display: flex;
         flex-direction: column;
