--- a/sass/layout/_donde-venimos.scss
+++ b/sass/layout/_donde-venimos.scss
@@ -6,27 +6,46 @@
 
     @media only screen and (min-width: $bp-small){
         display: grid;
-        grid-template-columns: 1fr 1fr ;
-        
+        grid-template-columns: 50% 50%;
+    }
+
+    @media only screen and (min-width: $bp-small){
+        margin: 0 3rem;
     }
 
     &__phone{
        
         margin: 0 auto;
         
-        
         &--img{
             width: 27rem;
             height: 44rem;
+
+            @media only screen and (min-width: $bp-medium){
+                width: 30rem;
+                height: 55rem;
+            }
         }
     }
 
     &__text{
         transform: translateY(5rem);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 30rem;
         @media only screen and (min-width: $bp-small){
             transform: translateY(9rem);
-            
+           
         }
+
+        @media only screen and (min-width: $bp-medium){
+            width: 60%;
+        } 
+
+        @media only screen and (min-width: $bp-largest){
+            width: 60%;
+        } 
     }
 
     
