--- a/sass/layout/_episodes.scss
+++ b/sass/layout/_episodes.scss
@@ -2,6 +2,8 @@
     background-image: linear-gradient(180deg, 
     $color-lg-light 0%, $color-lg-dark 100%);
     clip-path: polygon( 0 2%,  100% 0, 100% 98%, 0 100% );
+    padding-bottom: 10rem;
+    margin-bottom: 1rem;
 
     @media only screen and (min-width: $bp-small){
         padding-top: 4rem;
@@ -10,6 +12,10 @@
 
     &__heading{
         padding:3.2rem 0 2.1rem 1.6rem;
+        @media only screen and (min-width: $bp-largest){
+            margin-left: 20rem;
+            padding-top: 10rem;
+        }
     }
 
     &__container{
@@ -26,23 +32,30 @@
         padding: 0 1.6rem;
 
         @media only screen and (min-width: $bp-small){
-            padding: 1.6rem;
+           margin-bottom: 3rem;
+
         }
+        @media only screen and (min-width: $bp-largest){
+           text-align: center;
+        }
+
         &--1,
         &--2,
         &--3,
         &--4{
             width: 100%;
             height: 16rem;
-
+            
             @media only screen and (min-width: $bp-small){
                 height: 20rem;
             }
+
+            @media only screen and (min-width: $bp-largest){
+               width: 90%;
+            }
         }
         
-        &--4{
-           margin-bottom: 10rem;
-        }
+        
         
     } 
 }
