--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,6 +8,12 @@
         margin: 1.6rem 0 1.6rem 0;
         display: inline-block;
     }
+
+    @media only screen and (min-width: $bp-medium){
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }  
     
 }
 
