--- a/sass/layout/_invitados-especiales.scss
+++ b/sass/layout/_invitados-especiales.scss
@@ -3,17 +3,27 @@
     @media only screen and (min-width: $bp-small){
         transform: translateY(-5rem);
     }
+
   
     &__heading{
-        margin:0 1.6rem 1.6rem 1.6rem;
+        margin:0 1.6rem 1.6rem 1.6rem; 
+        @media only screen and (min-width: $bp-largest){
+            margin-left: 20rem;
+        }
     }
 
     &__imagenes{
         cursor: pointer;
         @media only screen and (min-width: $bp-small){
             display: grid;
-             grid-template-columns:repeat(2,50%) ;
-             grid-template-rows: repeat(3, 1fr);
+            grid-template-columns:repeat(2,50%) ;
+            grid-template-rows: repeat(3, 1fr);
+        }
+
+        @media only screen and (min-width: $bp-medium){
+            display: grid;
+            grid-template-columns:repeat(3,33%) ;
+            grid-template-rows: repeat(2, 1fr);
         }
        &--photo{ 
         width: 100%;
