--- a/css/style.css
+++ b/css/style.css
@@ -175,12 +175,15 @@ a.btn.conoce {
         margin-left: 20rem;
         padding-top: 10rem; } }
   .episodes__container {
-    width: 100%; }
+    width: 100%;
+    margin: 0 auto; }
     @media only screen and (min-width: 37.5em) {
       .episodes__container {
         display: grid;
         grid-template-columns: repeat(2, 50%);
-        grid-template-rows: repeat(2, 50%); } }
+        grid-template-rows: repeat(2, 50%);
+        width: 80%;
+        align-items: center; } }
   .episodes__episode {
     padding: 0 1.6rem; }
     @media only screen and (min-width: 37.5em) {
