--- a/sass/layout/_episodes.scss
+++ b/sass/layout/_episodes.scss
@@ -20,11 +20,16 @@
 
     &__container{
         width: 100%;
+        margin: 0 auto;
         @media only screen and (min-width: $bp-small){
             display: grid;
             grid-template-columns: repeat(2, 50%);
             grid-template-rows:  repeat(2,50%);
+            width: 80%;
+            align-items: center;
         }
+
+
     }
 
     &__episode{
