--- a/sass/layout/_episodes.scss
+++ b/sass/layout/_episodes.scss
@@ -1,9 +1,14 @@
 .episodes{
     background-image: linear-gradient(180deg, 
     $color-lg-light 0%, $color-lg-dark 100%);
-    clip-path: polygon( 0 2%,  100% 0, 100% 98%, 0 100% );
     padding-bottom: 10rem;
     margin-bottom: 1rem;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path:polygon(0 0)){
+        -webkit-clip-path: polygon( 0 2%,  100% 0, 100% 98%, 0 100% );
+        clip-path: polygon( 0 2%,  100% 0, 100% 98%, 0 100% );
+    }
+
 
     @media only screen and (min-width: $bp-small){
         padding-top: 4rem;
