--- a/sass/layout/_ultimas-novedades.scss
+++ b/sass/layout/_ultimas-novedades.scss
@@ -1,7 +1,12 @@
 .ultimas-novedades{
     background-image: linear-gradient(180deg, 
     $color-lg-light 0%, $color-lg-dark 100%);
-    clip-path: polygon( 0 7%,  100% 0, 100% 100%, 0 100% );
+
+    //si lo soporta que ejecute el codigo sino que sea una presentacion en cuadrado
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path:polygon(0 0)){
+        clip-path: polygon( 0 7%,  100% 0, 100% 100%, 0 100% );
+        -webkit-clip-path: polygon( 0 7%,  100% 0, 100% 100%, 0 100% );
+    }
 
     @media only screen and (min-width: $bp-small){
         clip-path: polygon( 0 30%,  100% 0, 100% 100%, 0 100% );
